# Assignments

./: .clang-format  .gitignore  init.el
assembler/: CMakeLists.txt  FirstPass.cpp  Symbol.cpp  compArchA1.tar.xz  compArchL2.tar.xz  compArchL4.tar.xz  main.cpp  old.tar.xz  test.cpp  testAsm.tar  testAsm.tar.xz  utest.cpp  xm2.cpp  xmEmu.tar.xz
assembler/Assembler/: Assembler.cpp  Assembler.hpp  tokenize.cpp
assembler/SymbolTable/: Symbol.cpp  Symbol.hpp  SymbolTable.cpp  SymbolTable.hpp
assembler/assembler/: assembler.hpp
assembler/compArchA1/: CMakeLists.txt  start.cpp  symbolTableTest.cpp
assembler/compArchA1/headers/: keywords.hpp  symbolTable.md
assembler/compArchA1/testFile/: 19 05 29 - FirstPassErrorsExample.asm  19 05 29 - Long label name.asm  19 05 29 - Long label name.lis  19 05 29 - Strings.asm  (+4 more)
assembler/compArchL2/: CMakeLists.txt
assembler/compArchL4/: main.cpp
assembler/docs/: dataDictionary.md  documentation.tex
assembler/headers/: FirstPass.hpp  Symbol.hpp  SymbolTable.hpp  assembler.hpp  definitions.hpp  error.hpp  isa.hpp  main.hpp  symbols.hpp
assembler/src/: assembler.cpp  firstPass.cpp  isa.cpp  secondPass.cpp  symbols.cpp
assembler/symbolTable/: symbol.cpp  symbolTable.cpp  symbolTable.hpp
assembler/xmEmu/: Globals.hpp  cpu.cpp  cpu.hpp  instructions.cpp  instructions.hpp  loader.hpp  print.tex
systemAnalysis/: A2.md  CMakeLists.txt  fibonacci.cpp  lab2task1.cpp  lab2task2.cpp  primeFactors.cpp  readme.md  student.txt
systemAnalysis/a3/: CMakeLists.txt  SimObj.cpp  SimObj.h  assignment.cpp  assignment.hpp  collition.hpp  input.txt  main.cpp  makeInput.py  packet.cpp  packet.hpp  start.cpp  start.hpp
systemAnalysis/checkedLab1/: a.out  checkedLab1.cpp  input.txt
systemAnalysis/lab5/: adder_class.h  adder_class.hpp  formula.hpp  formula_class.h  formula_class.hpp  main_formula.cpp  parse.cpp  parse.h  parse.hpp  variable.hpp
xm2/: CMakeLists.txt  all.hpp  assembler.cpp  assembler.hpp  commands.cpp  commands.hpp  constants.hpp  firstPass.cpp  main.cpp  oparands.cpp  oparands.hpp  oprands.hpp  symbols.cpp  symbols.hpp
(+262 files in other folders)
